qr code matches the design

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,40 @@
+
 .attribution { 
   font-size: 11px; 
-  text-align: center; }
+  text-align: center;
+}
     
 .attribution a { 
-  color: hsl(228, 45%, 44%); }
+  color: hsl(228, 45%, 44%); 
+}
     
 img {
   height: 200px; 
   width: auto;
-  border-radius: 15px;}
+  border-radius: 15px;
+}
     
 .message {
   display: flex; 
-  align-items: center; 
   flex-direction: column;
-  justify-self: center;
-  width: 200px;
+  width: 250px;
   height: auto;
   padding: 20px;
   margin: auto;
   background-color: white;
   border-radius: 15px;
-  }
+  align-items: center;
+}
 
-body {background-color: hsl(212, 45%, 89%);}
+body {
+  background-color: hsl(212, 45%, 89%);
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .first-line {
     font-weight: bolder;
@@ -32,6 +43,7 @@ body {background-color: hsl(212, 45%, 89%);}
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
+    font-family: sans-serif;
 }
 
 .second-line{
@@ -39,4 +51,5 @@ body {background-color: hsl(212, 45%, 89%);}
     text-align: center;
     padding-bottom: 15px;
     font-size: 15px;
+    color: gray;
 }
